[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/lored.gd" type="Script" id=1]
[ext_resource path="res://Styles/Buttons/hover.tres" type="StyleBox" id=2]
[ext_resource path="res://Styles/Buttons/pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Buttons/norm.tres" type="StyleBox" id=4]
[ext_resource path="res://Sprites/misc/horizontal_bar.png" type="Texture" id=5]
[ext_resource path="res://Styles/Labels/lored_output.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/animations/steel.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Sprites/misc/circle_filled.png" type="Texture" id=8]
[ext_resource path="res://Styles/Labels/Val.tres" type="DynamicFont" id=9]
[ext_resource path="res://Styles/Buttons/disabled.tres" type="StyleBox" id=10]
[ext_resource path="res://Styles/Labels/halt_text.tres" type="DynamicFont" id=11]
[ext_resource path="res://Sprites/animations/autobuyer.tres" type="SpriteFrames" id=12]
[ext_resource path="res://Prefabs/lored/progress_texture_limit_break.tscn" type="PackedScene" id=13]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Sprites/misc/horizontal_bar_textured_tall.png" type="Texture" id=30]
[ext_resource path="res://Sprites/misc/hold_false.png" type="Texture" id=31]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.05 )
border_width_top = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.901961 )
expand_margin_top = 4.0

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -1
extra_spacing_bottom = -3
extra_spacing_char = -1
font_data = ExtResource( 14 )

[node name="lored" type="Panel"]
margin_right = 64.0
margin_bottom = 84.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flair_bot" type="Panel" parent="."]
show_behind_parent = true
margin_right = 130.0
margin_bottom = 97.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy" type="Button" parent="."]
margin_left = 66.0
margin_top = 66.0
margin_right = 130.0
margin_bottom = 94.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="autobuywheel" type="AnimatedSprite" parent="."]
position = Vector2( 114.5, 80 )
scale = Vector2( 0.6, 0.6 )
frames = ExtResource( 12 )
frame = 13
playing = true

[node name="halt" type="Button" parent="."]
margin_left = 66.0
margin_top = 36.0
margin_right = 97.0
margin_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 4 )
disabled = true
enabled_focus_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="halt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.741176, 0.054902, 1 )
text = "=/="
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hold" type="Button" parent="."]
margin_left = 99.0
margin_top = 36.0
margin_right = 130.0
margin_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="hold"]
texture = ExtResource( 31 )
centered = false

[node name="worker" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = ExtResource( 7 )
animation = "ff"
frame = 22
playing = true
centered = false

[node name="amount" type="Label" parent="."]
margin_left = 66.0
margin_top = 1.0
margin_right = 130.0
margin_bottom = 14.0
mouse_filter = 0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="net" type="Label" parent="."]
margin_left = 66.0
margin_top = 18.0
margin_right = 130.0
margin_bottom = 31.0
mouse_filter = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.796875, 0.796875, 0.796875, 1 )
text = "0/s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="Sprite" parent="."]
position = Vector2( 79.5, 78 )
scale = Vector2( 0.0078125, 0.00781251 )
texture = ExtResource( 8 )
centered = false

[node name="fuel" type="TextureProgress" parent="."]
margin_top = 86.0
margin_right = 64.0
margin_bottom = 94.0
mouse_filter = 0
step = 0.1
value = 90.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.7, 0, 1, 0.4 )
tint_progress = Color( 0.701961, 0, 1, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbb" parent="fuel" instance=ExtResource( 13 )]
modulate = Color( 1, 1, 1, 1 )
self_modulate = Color( 1, 0.654902, 0, 1 )

[node name="lbt" parent="fuel" instance=ExtResource( 13 )]
visible = false

[node name="progress" type="TextureProgress" parent="."]
margin_top = 66.0
margin_right = 64.0
margin_bottom = 84.0
mouse_filter = 2
step = 0.1
value = 90.0
texture_under = ExtResource( 30 )
texture_progress = ExtResource( 30 )
tint_under = Color( 0.701961, 0, 1, 0.4 )
tint_progress = Color( 0.701961, 0, 1, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d" type="Label" parent="progress"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "+0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lb" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 86.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 66.0
margin_top = 36.0
margin_right = 97.0
margin_bottom = 64.0
step = 10.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_worker_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="buy" to="." method="_on_buy_button_down"]
[connection signal="mouse_entered" from="buy" to="." method="_on_buy_mouse_entered"]
[connection signal="mouse_exited" from="buy" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="buy" to="." method="_on_buy_pressed"]
[connection signal="button_down" from="halt" to="." method="_on_buy_button_down"]
[connection signal="mouse_entered" from="halt" to="." method="_on_halt_mouse_entered"]
[connection signal="mouse_exited" from="halt" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="halt" to="." method="_on_halt_pressed"]
[connection signal="button_down" from="hold" to="." method="_on_buy_button_down"]
[connection signal="mouse_entered" from="hold" to="." method="_on_hold_mouse_entered"]
[connection signal="mouse_exited" from="hold" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="hold" to="." method="_on_hold_pressed"]
[connection signal="mouse_entered" from="fuel" to="." method="_on_fuel_mouse_entered"]
[connection signal="mouse_exited" from="fuel" to="." method="_on_mouse_exited"]
